--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.5.0",
     "deepmerge": "^4.3.1",
     "expo": "^51.0.18",
@@ -35,8 +37,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.3.2",
-    "@react-native-community/netinfo": "11.3.1"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
