--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
