--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
